v2/logs/seq2seq_train_20251030_183916.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/root/wind_power_diffusion/v2/src/train.py", line 13, in <module>
    from .preprocess import load_and_clean
  File "/root/wind_power_diffusion/v2/src/preprocess.py", line 7, in <module>
    from .utils import detect_time_column, ensure_datetime, find_column, compute_time_features, encode_time_features
  File "/root/wind_power_diffusion/v2/src/utils.py", line 103
    return h.hexdigest())
                        ^
SyntaxError: unmatched ')'
